# container-tracer

./: .dockerignore  .gitignore  CMakeLists.txt  DispatchQueue.cpp  DispatchQueue.h  Dockerfile  Tracer.hpp  config  makefile  run_script.sh  test  testing  tracer
bad-test/: config  docker-compose.yml  test  test.cpp  test2
docker/: Dockerfile  config  run_script.sh  tracer
libs/nholmann/: json.hpp
libs/yhirose/: httplib.h
src/: ConfigurationReader.cpp  ConfigurationReader.hpp  DispatchQueue.cpp  DispatchQueue.h  HttpCommunicator.hpp  NetworkClient.hpp  Tracer.hpp
test/: Dockerfile  config  test  test.cpp  test2  test2.cpp
